--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "vue2-admin-lte",
-  "version": "0.4.3",
-  "description": "adminLTE to vuejs v2.x converting project",
-  "author": "devjin0617 <devjin0617@gmail.com>",
+  "name": "vue2-admin",
+  "version": "1.0.0",
+  "description": "fucking pjt",
   "scripts": {
     "mock": "./node_modules/.bin/json-server ./mock-server/index.js",
     "dev-server": "node build/dev-server.js",
@@ -12,10 +11,6 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/devjin0617/vue2-admin-lte"
   },
   "keywords": [
     "admin-lte",
@@ -29,13 +24,9 @@
     "vue-bootstrap",
     "front-end"
   ],
-  "bugs": {
-    "url": "https://github.com/devjin0617/vue2-admin-lte/issues"
-  },
-  "hompage": "https://github.com/devjin0617/vue2-admin-lte#readme",
   "dependencies": {
     "admin-lte": "^2.3.11",
-    "axios": "^0.15.3",
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "bootstrap3-wysihtml5-bower": "^0.3.3",
     "chart.js": "^2.5.0",
@@ -103,7 +94,7 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^1.17.7",
+    "sinon": "^2.2.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.3.0",
